@@ -1,4 +1,4 @@
-# $Id: probe-results.mk,v 1.1 2004/05/09 10:27:15 mthuurne Exp $
+# $Id: probe-results.mk,v 1.2 2004/05/09 15:26:55 mthuurne Exp $
 #
 # Display probe results, so user can decide whether to start the build,
 # or to change system configuration and rerun "configure".
@@ -37,6 +37,8 @@ all:
 	@echo ""
 	@echo "Customizable options:"
 	@echo "  Install to:      $(INSTALL_BASE)"
+	@echo "  default openmsx binary loocation: $(CATAPULT_OPENMSX_BINARY)"
+	@echo "  default openmsx system share dir: $(CATAPULT_OPENMSX_SHARE)"
 	@echo "  (you can edit these in build/custom.mk)"
 	@echo ""
 
