@@ -2,7 +2,7 @@ Source: openmsx-catapult
 Section: otherosfs
 Priority: optional
 Maintainer: Joost Yervante Damad <joost@lumatec.be>
-Build-Depends: debhelper (>= 4.0.0), docbook-to-man, autotools-dev, libwxgtk2.4-dev, libwxgtk2.4-contrib-dev, libxml2-dev
+Build-Depends: debhelper (>= 4), docbook-to-man, autotools-dev, libwxgtk2.4-dev, libwxgtk2.4-contrib-dev, libxml2-dev
 Standards-Version: 3.6.1
 
 Package: openmsx-catapult
